<?php

namespace Infrastructure\Model;

class Apartment {

    public static function getByUserId(int $userdataId): array {
        // код метода
        return [];
    }
}