<?php

namespace Infrastructure\Model;

class Device {

    public static function getCountersFromApartment(int $apartmentId, bool $true, bool $showArchive) : array {
        // код метода
        return [];
    }
}