<?php

namespace Infrastructure\Model;

class Tags {
    public static function getTags(string $type, string $deviceModelName) : array {
        // код метода
        return [];
    }
}