<?php

namespace Shared\Infrastructure;

class ValueHelper
{
    public static function firstNotEmpty(...$values) : mixed{
        // код метода
        return '';
    }
}